--- a/src/newpackage/admin.form
+++ b/src/newpackage/admin.form
@@ -143,6 +143,9 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="jCom_user">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="0" red="cc" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="sansserif" size="16" style="0"/>
         </Property>
